<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Point of Sail</string>
    <string name="total_label">Total:</string>
    <string name="balance_due">Balance Due:</string>
    <string name="action_settings">Settings</string>
    <string name="subtotal_tabel">Subtotal:</string>
    <string name="tax_label">Tax:</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="payMethodPrompt">Payment method:</string>
    <string name="debit">Debit</string>
    <string name="visa">Visa</string>
    <string name="mc">MasterCard</string>
    <string name="cash">Cash</string>
    <string name="item_search_label">Product Code:</string>
    <string name="search">Search</string>
    <string name="checkOut">Collect \'Yer Gold</string>
    <string name="zero_value">$0.00</string>
    <string name="reset">Start Over</string>
    <string name ="menu">Return to Port</string>
    <string-array name="current_ticket"></string-array>
    <string-array name="items"></string-array>
    <string name="payment_amount">Payment Amount</string>
    <string name="tender">Tender</string>
    <string name="new_sale">New Sale</string>
    <string name="tendered">Tendered:</string>
    <string name="change">Change:</string>
    <string name="quantity">Qty</string>
    <string name="num">1234</string>
    <string name="product_name">Product Name</string>
    <string name="start_sale">"Set Sail!"</string>
    <string name="quit">"Quit"</string>
    <string name="tagline">"A Swashbuckling Point of Sale Simulation"</string>
    <string name="credits">"A cool app from Steve Lyall  |  www.stevenlyall.ca  |  Images designed by Freepik.com"</string>

</resources>
