<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/pirateBlue"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/taglineTextView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/titleTextView"
            android:textColor="@color/pirateBlk"
            android:textSize="90sp"
            android:layout_marginTop="67dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tagline"
            android:id="@+id/textView2"
            android:layout_below="@+id/titleTextView"
            android:layout_alignLeft="@+id/titleTextView"
            android:layout_alignStart="@+id/titleTextView"
            android:layout_marginLeft="103dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:weightSum="1"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="103dp">

            <Button
                android:id="@+id/startButton"
                android:layout_width="200dp"
                android:layout_height="99dp"
                android:background="@color/pirateBkg"
                android:fontFamily="fonts/"
                android:text="@string/start_sale"
                android:textColor="@color/pirateBlk"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/titleTextView"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/titleTextView"
                android:layout_margin="5dp"
                android:layout_weight="4.30" />

            <Button
                android:id="@+id/quitButton"
                android:layout_width="200dp"
                android:layout_height="99dp"
                android:background="@color/pirateBkg"
                android:fontFamily="fonts/"
                android:text="@string/quit"
                android:textColor="@color/pirateBlk"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/titleTextView"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/titleTextView"
                android:layout_margin="5dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/ico"
            android:layout_toStartOf="@+id/titleTextView"
            android:layout_marginRight="58dp"
            android:layout_alignTop="@+id/titleTextView"
            android:layout_toLeftOf="@+id/titleTextView" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_toEndOf="@+id/titleTextView"
            android:layout_marginLeft="91dp"
            android:src="@drawable/pirate"
            android:layout_alignTop="@+id/titleTextView"
            android:layout_toRightOf="@+id/titleTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/credits"
            android:id="@+id/textView3"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp" />

    </RelativeLayout>
</RelativeLayout>