<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pirateBlue"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.stevenlyall.pointofsail.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_gravity="right" >

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="fill_parent" >
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hat" />

        </TableRow>

        <TableRow
            android:id="@+id/totalsDispRow"
            android:layout_width="match_parent"
            android:layout_height="110dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/totalTextLabels"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/subtotalLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/subtotal_tabel"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/pirateBlk" />

                    <TextView
                        android:id="@+id/taxLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:text="@string/tax_label"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/totalLabels"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/balance_due"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="30sp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/TotalNumHolder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/subtotalTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:text="@string/zero_value"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/taxTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:text="@string/zero_value"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/totalTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:text="@string/zero_value"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="35sp"
                        android:visibility="visible" />

                </LinearLayout>
            </LinearLayout>
        </TableRow>

        <LinearLayout
            android:id="@+id/tenderHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/LinearLayout04"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/amountTenderedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/tendered"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/amountTenderedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:text="@string/zero_value"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="35sp"
                    android:visibility="invisible" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/changeHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/changeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/change"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/changeAmountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:text="@string/zero_value"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="35sp"
                    android:visibility="invisible" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.72" >
            </TableRow>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@drawable/flag" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".51"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/paymentTypes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TableRow
                    android:id="@+id/payMethodHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/payMethodPrompt"
                        android:textColor="@color/pirateBlk"
                        android:textSize="30sp" />

                </TableRow>

                <RadioGroup
                    android:id="@+id/paymentMethods"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/debitRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debit"
                        android:textColor="@color/pirateBlk" />

                    <RadioButton
                        android:id="@+id/visaRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visa" />

                    <RadioButton
                        android:id="@+id/mcRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mc" />

                    <RadioButton
                        android:id="@+id/cashRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/amountHolder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.29"
                android:orientation="vertical" >

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp" >
                </TableRow>

                <EditText
                    android:id="@+id/amountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/payment_amount"
                    android:inputType="numberDecimal"
                    android:textColor="@color/AliceBlue" />

                <Button
                    android:id="@+id/tenderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/pirateBkg"
                    android:text="@string/tender" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/space"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menuBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/newSaleButton"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@color/pirateBkg"
                    android:onClick="tenderButtonOnClick"
                    android:text="@string/new_sale" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.16"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" >

                </TableRow>

                <Button
                    android:id="@+id/doneButton"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/pirateBkg"
                    android:onClick="resetButtonOnClick"
                    android:text="@string/done"
                    android:textColor="@color/pirateBlk"
                    android:textSize="30sp"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="347dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" >

                </TableRow>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
