<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pirateBlue"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.stevelyall.possimulator.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".7"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/topRowFreeSpace"
            android:layout_width="match_parent"
            android:layout_height="89dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/spyglass" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ListView
                android:id="@+id/productsOnTicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/current_ticket" >

            </ListView>

        </TableRow>

        <TableRow
            android:id="@+id/totalsDispRow"
            android:layout_width="match_parent"
            android:layout_height="110dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/totalTextLabels"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/subtotalLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/subtotal_tabel"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/taxLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:text="@string/tax_label"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/totalLabels"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/total_label"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="40sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/TotalNumHolder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/subtotalTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:text="@string/zero_value"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/taxTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:text="@string/zero_value"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/totalTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:text="@string/zero_value"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/pirateBlk"
                        android:textSize="40sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/resetButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:text="@string/reset"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".4">

        <TableRow
            android:id="@+id/itemSearchHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/item_search_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="10"
                android:onClick="addButtonOnClick"
                android:text="Add" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="15sp">

            <ListView
                android:id="@+id/availableProducts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/items" >

            </ListView>

        </TableRow>

        <TableRow
            android:id="@+id/menuBar"
            android:layout_width="match_parent"
            android:layout_height="96dp" >

            <Button
                android:id="@+id/doneButton"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/pirateBkg"
                android:fontFamily="fonts/"
                android:text="@string/checkOut"
                android:textColor="@color/pirateBlk"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/reset"
                android:id="@+id/resetSale"
                android:background="@color/pirateBkg"
                android:layout_margin="5dp"
                android:textSize="25sp"
                android:textColor="@color/pirateBlk"
                android:textStyle="bold" />

            <Button
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/menu"
                android:id="@+id/quitButton"
                android:background="@color/pirateBkg"
                android:layout_margin="5dp"
                android:textSize="25sp"
                android:textColor="@color/pirateBlk"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/palms"
                android:layout_marginLeft="40dp" />

        </TableRow>

    </LinearLayout>

</LinearLayout>
